test/compile-fail/identifier/impl-path-segment-keyword/expected.txt
error: could not parse ./test/compile-fail/identifier/impl-path-segment-keyword/top.rhdl: unexpected token
  ┌─ ./test/compile-fail/identifier/impl-path-segment-keyword/top.rhdl:3:8
  │
3 │     fn r#super() {}
  │        ^^^^^^^ expected any of ["NonKeywordIdentifier", "RawIdentifier", "TokParenOpen"]

